--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/nombreDelProyecto
+MONGODB_URI=mongodb+srv://<Usuario><Contraseña>4@mern-vercel.wcveb.mongodb.net/
 PORT=5000
