--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,14 @@
 {
+  "install_command": "npm install --legacy-peer-deps",
   "version": 2,
   "builds": [
     {
       "src": "server.js",
       "use": "@vercel/node"
+    }, 
+    {
+      "src": "src/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
