--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -14,7 +14,11 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"  
     }
   ]
 }
